<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tiles</string>
    <string name="appinfo">About</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_home_tile">HomeTile</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>

    <string-array name="difficulty">
        <item>Easy </item>
        <item>Normal</item>
        <item>Difficult</item>
        <item>God Like</item>
    </string-array>

    <string name="title_activity_game">Game</string>
    <string name="moves">moves</string>
    <string name="puzzle_size_x_y">{0} x {1}</string>
    <string name="finished_type_expert_puzzle_in_n_moves">Finished {0} puzzle {1,choice,0#|1# (expert mode)"} in {2} {2,choice,0#moves|1#move|1&lt;moves}.</string>
    <string name="type_expert_puzzle_n_moves_so_far">{0} puzzle.\n{2} {2,choice,0#moves|1#move|1&lt;moves} so far.{1,choice,0#|1#\nExpert mode is on.}</string>
    <string name="message_stats_best_avg_plays">{0}\n\nBest: {1} {1,choice,0#moves|1#move|1&lt;moves}\nAverage: {2,number,0.##} moves\nPlays: {3}</string>
    <string name="label_ok">OK</string>
    <string name="label_show_numbers_none">None</string>
    <string name="label_show_numbers_some">Some</string>
    <string name="label_show_numbers_all">All</string>
    <string name="title_stats">Stats</string>
    <string name="title_new_record">New record!</string>
    <string name="title_solved">Solved!</string>
    <string name="title_select_tiling">Select tiling</string>
    <string name="title_show_numbers">Show numbers</string>
    <string name="menu_new_image">New image</string>
    <string name="menu_select_image">Select image</string>
    <string name="menu_take_photo">Take photo</string>
    <string name="menu_scramble">Scramble</string>
    <string name="menu_change_tiling">Change tiling</string>
    <string name="menu_show_numbers">Show numbers: {0}</string>
    <string name="menu_stats">Stats</string>
    <string name="menu_about">About</string>
    <string name="title_about">n Tile Puzzle</string>
    <string name="content_about">Tile Game By Team BlackBox</string>
    <string name="error_could_not_load_image">Could not load image.</string>
    <string name="error_could_not_load_image_error">Could not load image: {0}</string>
    <string name="error_could_not_create_directory_to_store_photo">Could not create directory to store photo.</string>
    <string name="toast_disabled_expert_mode">Turning on numbers has disabled expert mode.</string>
    <string name="toast_not_enabled_expert_mode">Numbers are off. Expert mode will be enabled when the puzzle is scrambled.</string>
    <string name="title_activity_home">Home</string>
    <string name="playbtn">Play</string>
    <string name="helpbtn">Help</string>
    <string name="title_activity_help">Help</string>
    <string name="hello_world">Hello world!</string>
    <string name="helpinfo">Drag the tiles to place them in their correct position. The Sequence disappear and phone vibrates when in correct position. Place all the Tiles in correct position to win.</string>
    <string name="menuingame">Press Menu when in game, to scramble, select new images,  change  tiling, take picture and look at stats. Explore it !</string>
    <string name="title_activity_about">About</string>
    <string name="aboutxt">About</string>
    <string name="teamname">Team BlackBox</string>
    <string name="names">[ Avinash ] [Chinmay]</string>

</resources>
