<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/homebg"
    tools:context="com.thenoob.blackbox.tiles.Home" 
    >

    <Button
        android:id="@+id/helpbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/playbtn"
        android:layout_below="@+id/playbtn"
        android:layout_marginTop="36dp"
        android:background="@drawable/helpbtn"
        android:minWidth="230dp"
        android:text="@string/helpbtn"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/playbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="214dp"
        android:background="@drawable/playbtn"
        android:minWidth="230dp"
        android:text="@string/playbtn"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:src="@drawable/appname" />

    

    <Button
        android:id="@+id/infobtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/infotxt"
        android:layout_centerHorizontal="true"
        android:background="@drawable/appinfo" />
    <TextView
        android:id="@+id/infotxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/appinfo" />

</RelativeLayout>
