<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/homebg"
    tools:context="com.thenoob.blackbox.tiles.Help" >

    <TextView
        android:id="@+id/helptxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/helpbtn"
        android:textSize="80sp"
        android:textColor="@color/black"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/drag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/helptxt"
        android:layout_marginTop="47dp"
        android:layout_marginRight="20dp"
        android:src="@drawable/drag" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/drag"
        android:layout_below="@+id/helpinfo"
        android:layout_marginTop="88dp"
        android:layout_marginRight="20dp"
        android:src="@drawable/menuingame" />

    <TextView
        android:id="@+id/helpinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/drag"
        android:layout_toRightOf="@+id/drag"
        android:maxWidth="250dp"
        android:text="@string/helpinfo"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/score" />

    <TextView
        android:id="@+id/menuingame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/helpinfo"
        android:layout_alignTop="@+id/imageView1"
        android:text="@string/menuingame"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/score" />
		
</RelativeLayout>
